--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -22,5 +22,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: ./../../
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/test1
