--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -23,6 +23,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./..
-          file: ./dockerfile
+          file: Dockerfile
           push: true
           tags: ayushgoel1/test1
