--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  dockerpullanddeploy:
     runs-on: ubuntu-latest
     steps:
       -
@@ -16,12 +16,11 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ayushgoel1
-          password: dckr_pat_C_S-xNXGZH6KQbGzD54_zd7GVE4
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          file: Dockerfile
-          push: true
-          tags: ayushgoel1/test1
+        name: pull
+        run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/test1
+      -
+        name: deploy
+        run: docker exec -it ${{ secrets.DOCKERHUB_USERNAME }}/test1 a.cpp
