--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -44,5 +44,8 @@ jobs:
         run: docker run -t -d --name=testcontainer ayushgoel1/test1 
       - 
         name: execute
-        run: docker exec -t testcontainer gcc a.c
+        run:
+          docker exec -t testcontainer gcc a.c 
+          ./a.out
+              
       
