--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -6,28 +6,28 @@ on:
       - 'main'
 
 jobs:
-#   dockerbuildandpush: 
-#     runs-on: ubuntu-latest
-#     steps:
-#       -
-#         name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v2
-#       -
-#         name: Login to DockerHub
-#         uses: docker/login-action@v2
-#         with:
-#           username: ayushgoel1
-#           password: dckr_pat_C_S-xNXGZH6KQbGzD54_zd7GVE4
-#       -
-#         name: Build and push
-#         uses: docker/build-push-action@v3
-#         with:
-#           file: ./Dockerfile
-#           push: true
-#           tags: ayushgoel1/test1
+  dockerbuildandpush: 
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ayushgoel1
+          password: dckr_pat_C_S-xNXGZH6KQbGzD54_zd7GVE4
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          file: ./Dockerfile
+          push: true
+          tags: ayushgoel1/test1
           
   dockerpullanddeploy:
-#     needs: dockerbuildandpush
+    needs: dockerbuildandpush
     runs-on: ubuntu-latest
     steps:
       -
