--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,3 +1,7 @@
-FROM gcc, ubuntu
+FROM ubuntu
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && \
+    apt-get -y install gcc mono-mcs && \
+    rm -rf /var/lib/apt/lists/*
 WORKDIR /src
 COPY . /src
