--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           file: ./Dockerfile
           push: true
-          tags: ayushgoel1/test1
+          tags: first-attempt
           
   dockerpullanddeploy:
     needs: dockerbuildandpush
@@ -41,11 +41,7 @@ jobs:
         run: docker pull ayushgoel1/test1
       -
         name: createcontainer
-        run: docker run -t -d --name=testcontainer ayushgoel1/test1 
-      - 
-        name: execute
-        run: |
-          docker exec -t testcontainer gcc a.c 
-          ./a.out
-              
+        run: docker-compose up
+#         with: 
+#           compose-file = ./docker-compose.yml
       
