--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 services:
   routinetest:
-    container_name : first_attempt
-    image : first_attempt
-    build : 
-      context: .
-    environment: 
-      date: ${date}
+    container_name : ayushgoel1/first_attempt
+    image : ayushgoel1/first_attempt
       
