--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,8 +1,4 @@
-FROM ubuntu
-ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && \
-    apt-get -y install gcc mono-mcs && \
-    rm -rf /var/lib/apt/lists/*
+FROM gcc
 WORKDIR /src
 COPY . /src
 ENTRYPOINT ["gcc"]
