--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
   routinetest:
-    container_name : ayushgoel1/first-attempt
-    image : ayushgoel1/first-attempt
+    image : first-attempt
       
